Add title on admin-form

--- a/views/PrestaShop/pconconfiguratorurl/admin/product/configurator_url.html.twig
+++ b/views/PrestaShop/pconconfiguratorurl/admin/product/configurator_url.html.twig
@@ -1,3 +1,5 @@
+<h2>pCon.UI</h2>
+
 {% use "PrestaShopBundle:Admin/TwigTemplateForm:bootstrap_4_horizontal_layout.html.twig" %}
 
 {{ form_errors(form) }}
